# nightingale

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.desktop  Makefile.emscripten  README.md  addons.cpp  app.cpp  app.h  audio.cpp  audio.h  build.sh  controller.cpp  controller.h  editor.cpp  editor.h  glfw.cmake  graph.cpp  imgui.cmake  imguisoloud.cpp  imguisoloud.h  main_emscripten.cpp  main_glfw.cpp  miniaudio.h  nightingale.sublime-project  nodeGraphEditor.nge.style  shell_minimal.html  state.h  widgets.cpp  widgets.h
.github/workflows/: build.yaml
imgui/: README.md  imgui_impl_opengl3.cpp  imguihelper.cpp  imguinodegrapheditor.cpp  imguisoloud.cpp
